# ChangeLog for kde-base/kajongg
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kajongg/ChangeLog,v 1.48 2012/04/18 22:06:32 maekke Exp $

  18 Apr 2012; Markus Meier <maekke@gentoo.org> kajongg-4.8.1.ebuild:
  x86 stable, bug #409403

*kajongg-4.8.2 (04 Apr 2012)

  04 Apr 2012; Johannes Huber <johu@gentoo.org> +kajongg-4.8.2.ebuild:
  Version bump KDE SC 4.8.2

  04 Apr 2012; Agostino Sarubbo <ago@gentoo.org> kajongg-4.8.1.ebuild:
  Stable for amd64, wrt bug #409403

  23 Mar 2012; Johannes Huber <johu@gentoo.org> -kajongg-4.8.0.ebuild:
  Remove KDE SC 4.8.0

*kajongg-4.8.1 (06 Mar 2012)

  06 Mar 2012; Andreas K. Huettel <dilfridge@gentoo.org> +kajongg-4.8.1.ebuild:
  Version bump KDE SC 4.8.1

  20 Feb 2012; Johannes Huber <johu@gentoo.org> -kajongg-4.6.3.ebuild:
  Remove KDE SC 4.6.3

  18 Feb 2012; nixnut <nixnut@gentoo.org> kajongg-4.7.4.ebuild:
  ppc stable #396359

*kajongg-4.8.0 (25 Jan 2012)

  25 Jan 2012; Johannes Huber <johu@gentoo.org> +kajongg-4.8.0.ebuild:
  Version bump KDE SC 4.8.0

  17 Jan 2012; Johannes Huber <johu@gentoo.org> -kajongg-4.7.3.ebuild:
  Remove KDE SC 4.7.3

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> kajongg-4.7.4.ebuild:
  Stable for amd64, wrt bug #396359

  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> kajongg-4.7.4.ebuild:
  x86 stable wrt bug #396359

  18 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org> -kajongg-4.6.5.ebuild:
  Drop KDE 4.6.5

*kajongg-4.7.4 (11 Dec 2011)

  11 Dec 2011; Alexey Shvetsov <alexxy@gentoo.org> +kajongg-4.7.4.ebuild:
  Version bump KDE SC 4.7.4

  07 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kajongg-4.7.2-r1.ebuild:
  Drop KDE 4.7.2

  07 Dec 2011; Markos Chandras <hwoarang@gentoo.org> kajongg-4.7.3.ebuild:
  Stable on amd64 wrt bug #388279

  07 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> kajongg-4.7.3.ebuild:
  x86 stable wrt bug #388279

*kajongg-4.7.3 (02 Nov 2011)
